# Render

./: .gitignore  CMakeLists.txt  Changelog.txt  LICENSE
Example/: ImGui.hlsl  Render Example.cpp  Render Example.sln  Render Example.vcxproj  Render Example.vcxproj.filters  imgui_impl_render.cpp  imgui_impl_render.h  imgui_impl_win32.cpp
Example/x64/Debug/: Render Example.exe.recipe  Render Example.vcxproj.FileListAbsolute.txt
Private/: Binding.cpp  Buffers.cpp  IDArray.h  IndirectCommands.cpp  PipelineState.cpp  Raytracing.cpp  RootSignature.cpp  Shaders.cpp  SparseArray.h  Textures.cpp
Private/Impl/: BindingImpl.h  BuffersImpl.h  IndirectCommandsImpl.h  PipelineStateImpl.h  RaytracingImpl.h  RootSignatureImpl.h  ShadersImpl.h  TexturesImpl.h
Private/Impl/Dx11/: BindingImpl.cpp  BuffersImpl.cpp  CommandListImpl.cpp  Dx11Types.cpp  Dx11Types.h  IndirectCommandsImpl.cpp  PipelineStateImpl.cpp  RaytracingImpl.cpp  RenderImpl.cpp  RenderImpl.h  RootSignatureImpl.cpp  ShadersImpl.cpp  TexturesImpl.cpp  ViewImpl.cpp
Private/Impl/Dx12/: BindingImpl.cpp  CommandListImpl.cpp  Dx12Types.cpp  Dx12Types.h  DynamicBuffersImpl.cpp  IndirectCommandsImpl.cpp  PipelineStateImpl.cpp  RaytracingImpl.cpp  RenderImpl.cpp  RenderImpl.h  RootSignatureImpl.cpp  SamplersImpl.cpp  ShadersImpl.cpp  StaticBuffersImpl.cpp  TexturesImpl.cpp  ViewImpl.cpp
Private/Impl/Dxc/: DxCompiler.cpp  DxCompiler.h
Private/Impl/VK/: PipelineStateImpl.cpp  RenderImpl.cpp  RenderImpl.h  ShadersImpl.cpp  SpirVShaderCompiler.cpp  SpirVShaderCompiler.h  VKFormats.cpp  VKFormats.h  VKHelpers.h  ViewImpl.cpp
Render/: .View.h.swp  Binding.cpp  Binding.h  Buffers.cpp  Buffers.h  CMakeLists.txt  CommandList.cpp  CommandList.h  IDArray.h  IndirectCommands.h  PipelineState.cpp  PipelineState.h  Raytracing.h  Render.h  RenderDefines.h  RenderPtr.h  RenderTypes.h  RootSignature.cpp  RootSignature.h  Samplers.h  Shaders.cpp  Shaders.h  SparseArray.h  TextureInfo.h  Textures.cpp  Textures.h  View.h
Render/Impl/: BindingImpl.h  BuffersImpl.h  PipelineStateImpl.h  RootSignatureImpl.h  ShadersImpl.h  TexturesImpl.h
Render/Impl/Dx/: DxErrorHandling.cpp  DxErrorHandling.h
Render/Impl/Dx11/: BindingImpl.cpp  BuffersImpl.cpp  CommandListImpl.cpp  Dx11Types.cpp  Dx11Types.h  PipelineStateImpl.cpp  RenderImpl.cpp  RenderImpl.h  RootSignatureImpl.cpp  SamplersImpl.cpp  ShadersImpl.cpp  TexturesImpl.cpp  ViewImpl.cpp
Render/Impl/Dx12/: BindingImpl.cpp  CommandListImpl.cpp  Dx12Types.cpp  Dx12Types.h  DynamicBuffersImpl.cpp  PipelineStateImpl.cpp  RenderImpl.cpp  RenderImpl.h  RootSignatureImpl.cpp  SamplersImpl.cpp  ShadersImpl.cpp  StaticBuffersImpl.cpp  TexturesImpl.cpp  ViewImpl.cpp
Render/Impl/Dxc/: DxCompiler.cpp  DxCompiler.h
Render/Private/: RootSignature.cpp  Shaders.cpp  Textures.cpp
Render/Private/Impl/: BindingImpl.h  PipelineStateImpl.h  ShadersImpl.h  TexturesImpl.h
Render/Private/Impl/Dx11/: BindingImpl.cpp  CommandListImpl.cpp  RenderImpl.cpp  RootSignatureImpl.cpp  ShadersImpl.cpp  TexturesImpl.cpp
Render/Private/Impl/Dx12/: PipelineStateImpl.cpp  TexturesImpl.cpp  ViewImpl.cpp
Render/Private/Impl/Dxc/: DxCompiler.h
